--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,4 +5,4 @@ $primary-color: #af0000cc;
 $light-color: #ffffff;
 $medium-color: rgb(228, 228, 228);
 $dark-color: rgb(0, 0, 0);
-$bg-image: url('/dist/img/marlon-5PUy-FMdC3I-unsplash.jpg');
+$bg-image: url('https://kmagroute.com/data/media/storage/sass-example-page/marlon-5PUy-FMdC3I-unsplash.jpg');
