--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1,3 +1,9 @@
+@media(min-width:1100px){
+    #header-home{
+        font-size: 28px;
+    }
+}
+
 @media(max-width: 820px){
     #header-home{
         height: 70vh;
@@ -5,6 +11,9 @@
 }
 
 @media (max-width:740px){
+    #header-home{
+        height: 100vh;
+    }
     #main-nav{
         flex-direction: column;
         ul{
@@ -13,6 +22,9 @@
     }
 }        
 @media (max-width:550px){
+    #header-home{
+        height: 100vh;
+    }
     #main-nav{
         flex-direction: column;
         align-items: center;
